k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-management-svc
spec:
  selector:
    app: audit-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
