k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: audit-management-route
spec:
  to:
    kind: Service
    name: audit-management-svc
  port:
    targetPort: 80
  tls:
    termination: edge
